# no2_estimating_system

./: .gitignore  README.md  t.json
.github/workflows/: download_cnemc.yml  download_era5&rec&est.yml  download_era5.yml  download_gems.yml  download_geoscf.yml  issue.yml  pages.yml
client/: package.json
pages/: README.md  components.d.ts  env.d.ts  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
pages/src/: App.vue
pages/src/api/: data.ts
pages/src/components/: layer-popup.vue  no2.vue
pages/src/constants/: index.ts
pages/src/layout/: index.vue  left-menu.vue
pages/src/router/: index.ts
pages/src/stores/: map.ts  menu.ts
pages/src/types/: index.ts
pages/src/utils/: index.ts  requests.ts
shared/: data_record.json  email_template.html
shared/data_source/dem/: dem.parquet
shared/data_source/ndvi/: 0108.parquet  0127.parquet  0215.parquet  0301.parquet  0314.parquet  0329.parquet  0421.parquet  0504.parquet  0524.parquet  0531.parquet  0620.parquet  0703.parquet  0713.parquet  0728.parquet  0816.parquet  (+8 more)
shared/estimate/: surface_no2_record.json
shared/reconstruct/: README.md
task/: download_cnemc.py  download_era5.py  download_gems.py  download_geoscf.py  est_no2.py  handle_issue.py  pyproject.toml  rec_no2.py
task/src/: config.py  constant.py  types.py
task/src/modules/downloader/: README.md  basic.py  cnemc.py  era5.py  gems.py  geoscf.py
task/src/modules/estimator/: main.py
task/src/modules/issuehandler/: main.py
task/src/modules/reconstructor/: main.py
task/src/utils/: heavy.py  light.py
(+180 files in other folders)
