[project]
name = "task"
version = "0.1.0"
description = "zzw's no2 estimating system task project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "catboost>=1.2.8",
    "cdsapi>=0.7.7",
    "dotenv>=0.9.9",
    "earthengine-api>=1.7.4",
    "fastparquet>=2025.12.0",
    "geedim>=2.0.0",
    "geemap>=0.36.6",
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "netcdf4>=1.7.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "rasterio>=1.4.4",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
]
